--- a/home.html
+++ b/home.html
@@ -1,7 +1,10 @@
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
+ <script src="https://code.jquery.com/jquery-3.4.1.min.js"
 integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 crossorigin="anonymous"></script>
   <div class="head"></div>
+   
 
   <div class="foot"></div>
   
