--- a/home.html
+++ b/home.html
@@ -1,10 +1,19 @@
 
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
 integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
 crossorigin="anonymous"></script>
   <div class="head"></div>
-   
+   <div class="midpart">
+     <h1>Welcome to Our Support Center</h1>
+     <h3>How Can We Help You?</h3>
+     <form class="box" action="#" style="margin:auto;max-width:300px">
+      <input type="text" placeholder="Search.." name="search1">
+      <button type="submit"><i class="fa fa-search"></i></button>
+    </form>
+   </div>
 
   <div class="foot"></div>
   
