transfer search bar code to header file

--- a/home.html
+++ b/home.html
@@ -6,16 +6,9 @@
 <div class="head"></div>
 
 <div class="midpart">
-  <div class="search">
-    <h2>Welcome to Our Support Center</h2>
-    <p style="margin-bottom: 20px">How Can We Help You?</p>
-    <form class="bar" action="#" style="margin:auto;max-width:450px; position: relative;">
-      <input type="text" placeholder="Type your question here.." name="search1">
-      <button type="submit" class="icon"><i class="fa fa-search"></i></button>
-    </form>
-  </div>
+  
   <div class="box">
-      <a href="javascript:void(0)" class="mainbox">Realtime Testing</a>
+      <a href="realtime.html" class="mainbox">Realtime Testing</a>
       <a href="javascript:void(0)" class="mainbox">Automation</a>
   </div>
 
