add new realtime html file with header and footer

--- a/realtime.html
+++ b/realtime.html
@@ -5,9 +5,9 @@
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
 <div class="head"></div>
-<div>
-  
-</div>
+<!-- <div id="testAddBox">
+
+</div> -->
 
 
 <div class="foot"></div>
@@ -19,11 +19,16 @@
 
   });
 
-  function myFunction() {
-  var btn = document.createElement("BUTTON");
-  btn.innerHTML = "CLICK ME";
-  document.body.appendChild(btn);
-}
-myfunction()
+  // window.onload = function () {
+  //   var activityNumber = 3;
+  //   var addPosition = document.getElementById("testAddBox");
+  //   addPosition.innerHTML += '<div class="box"> <a href="home.html" class="mainbox">Testing sub1 </div> </a>';
+  // }
 
-  </script>
+  // function myFunction() {
+
+  //   document.body.appendChild(btn);
+  // }
+  // myfunction()
+
+</script>
