--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
   <div class="box">
     <a href="realtime.html" class="mainbox"><img src="images/realimg.png"
         style="width: 100px; text-align: center; display: block; margin: 0 auto">Realtime Testing</a>
-    <a href="javascript:void(0)" class="mainbox"><img src="images/auto.png"
+    <a href="automation.html" class="mainbox"><img src="images/auto.png"
         style="width: 100px; text-align: center; display: block; margin: 0 auto">Automation</a>
   </div>
   </div>
