--- a/realtime.html
+++ b/realtime.html
@@ -3,6 +3,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script src="js/json.js"></script>
   <script src="js/script.js"></script>
 
 <div class="head"></div>
