add box nd add json

--- a/realtime.html
+++ b/realtime.html
@@ -8,6 +8,13 @@
 
 <div class="head"></div>
 
+<div class="midpart">
+  <div class="box">
+      <a id="catg" href="subcat.html" class="mainbox"></a>
+      <a id="que" href="subques.html" class="mainbox"></a>
+  </div>
+</div>
+
 
 
 <div class="foot"></div>
