--- a/subcat.html
+++ b/subcat.html
@@ -6,15 +6,17 @@
 <script src="js/json.js"></script>
 <script src="js/script.js"></script>
 
-
 <div class="head"></div>
 
 <div class="midpart">
-    <div class="box">
-      <a id="catg" href="javascript:void(0);" class="mainbox"></a>
-      <a id="que" href="javascript:void(0);" class="mainbox"></a>
-    </div>
+  <div class="box">
+      <a id="mob" href="javascript:void(0);" class="mainbox"></a>
+      <a id="brow" href="javascript:void(0);" class="mainbox"></a>
+      <a id="desk" href="javascript:void(0);" class="mainbox"></a>
+  </div>
 </div>
+
+
 
 <div class="foot"></div>
 <script>
