--- a/home.html
+++ b/home.html
@@ -15,9 +15,9 @@
 <div class="midpart">
 
   <div class="box">
-    <a href="realtime.html" class="mainbox"><img src="images/realimg.png"
+    <a class="mainbox"><img src="images/realimg.png"
         style="width: 100px; text-align: center; display: block; margin: 0 auto">Realtime Testing</a>
-    <a href="automation.html" class="mainbox"><img src="images/auto.png"
+    <a class="mainbox"><img src="images/auto.png"
         style="width: 100px; text-align: center; display: block; margin: 0 auto">Automation</a>
   </div>
   </div>
