--- a/home.html
+++ b/home.html
@@ -15,10 +15,10 @@
 <div class="midpart">
 
   <div class="box">
-    <a class="mainbox"><img src="images/realimg.png"
-        style="width: 100px; text-align: center; display: block; margin: 0 auto">Realtime Testing</a>
-    <a class="mainbox"><img src="images/auto.png"
-        style="width: 100px; text-align: center; display: block; margin: 0 auto">Automation</a>
+    <p class="mainbox"><img src="images/realimg.png"
+        style="width: 100px; text-align: center; display: block; margin: 0 auto">Realtime Testing</p>
+    <p class="mainbox"><img src="images/auto.png"
+        style="width: 100px; text-align: center; display: block; margin: 0 auto">Automation</p>
   </div>
   </div>
 
